--- a/IndexPage/index.html
+++ b/IndexPage/index.html
@@ -39,8 +39,8 @@
                             <h5 class="text-uppercase bg-white text-dark py-2 rounded-pill">Social Links</h5>
                             <ul class="list-unstyled text-white-50 ml-5 py-2 text-center">
                         <li class="list-item">
-                            <a id ="skills" href="https://www.linkedin.com/feed/?trk" target="_blank">Linkdin</a><br>  
-                            <a id ="skills" href="https://github.com/Kundi-Ravinder/byb_project" target="_blank">Github</a><br>
+                            <a id ="skills" href="https://www.linkedin.com/in/ravinder-kundi" target="_blank">Linkdin</a><br>  
+                            <a id ="skills" href="https://github.com/Kundi-Ravinder/CodingTasks" target="_blank">Github</a><br>
                             
                         </li>
                     </ul>
